--- a/css/index.css
+++ b/css/index.css
@@ -22,3 +22,8 @@
 	padding: 5px 10px;
     border: 1px solid #000;
 }
+#huiqi{
+	display: inline-block;
+	padding: 5px 10px;
+    border: 1px solid #000;
+}
